src/main/java/com/example/econoforestbe/global/config/response/error/exception/eatBoard/ChangedInfoException.java
package com.example.econoforestbe.global.config.response.error.exception.eatBoard;public class ChangedInfo {
}
